- Recompile of all debug binaries and update help exports.

--- a/docs/Get-ADTExecutableInfo.mdx
+++ b/docs/Get-ADTExecutableInfo.mdx
@@ -68,7 +68,7 @@ One or more literal executable paths to retrieve info from.
 ```yaml
 Type: String[]
 Parameter Sets: LiteralPath
-Aliases:
+Aliases: PSPath
 
 Required: True
 Position: Named
