Inconspicuous commit - Great Button Debacle of 2025. Hope no one notices
Changes the primary action button to the left position and secondary action to the right across the UI, including:

- Updated dialog templates in Fluent interface
- Fixed CloseAppsDialog button logic and text references
- Adjusted RestartDialog button actions
- Modified examples and documentation to match new button order

This change creates a more intuitive user experience by placing the primary/continue action on the left and secondary/defer action on the right, consistent with common UI patterns.

--- a/docs/Show-ADTInstallationPrompt.mdx
+++ b/docs/Show-ADTInstallationPrompt.mdx
@@ -30,13 +30,13 @@ The prompt can also display a system icon and be configured to persist, minimize
 ### EXAMPLE 1
 
 ```powershell
-Show-ADTInstallationPrompt -Message 'Do you want to proceed with the installation?' -ButtonRightText 'Yes' -ButtonLeftText 'No'
+Show-ADTInstallationPrompt -Message 'Do you want to proceed with the installation?' -ButtonLeftText 'Yes' -ButtonRightText 'No'
 ```
 
 ### EXAMPLE 2
 
 ```powershell
-Show-ADTInstallationPrompt -Title 'Funny Prompt' -Message 'How are you feeling today?' -ButtonRightText 'Good' -ButtonLeftText 'Bad' -ButtonMiddleText 'Indifferent'
+Show-ADTInstallationPrompt -Title 'Funny Prompt' -Message 'How are you feeling today?' -ButtonLeftText 'Good' -ButtonRightText 'Bad' -ButtonMiddleText 'Indifferent'
 ```
 
 ### EXAMPLE 3
