--- a/docs/Show-ADTInstallationProgress.mdx
+++ b/docs/Show-ADTInstallationProgress.mdx
@@ -13,8 +13,8 @@ Displays a progress dialog in a separate thread with an updateable custom messag
 
 ```powershell
 Show-ADTInstallationProgress [[-WindowLocation] <String>] [[-MessageAlignment] <TextAlignment>] [-NotTopMost]
- [-NoRelocation] -WindowTitle <String> -WindowSubtitle <String> -StatusMessage <String>
- -StatusMessageDetail <String> [<CommonParameters>]
+ [-NoRelocation] -WindowTitle <String> [-WindowSubtitle <String>] -StatusMessage <String>
+ [-StatusMessageDetail <String>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -152,7 +152,7 @@ Type: String
 Parameter Sets: (All)
 Aliases:
 
-Required: True
+Required: False
 Position: Named
 Default value: None
 Accept pipeline input: False
@@ -169,7 +169,7 @@ Type: String
 Parameter Sets: (All)
 Aliases:
 
-Required: True
+Required: False
 Position: Named
 Default value: None
 Accept pipeline input: False
